# flake-templates

./: README.md  flake.nix
nix/formatting/: default.nix
nix/shell/: default.nix
templates/lean/: flake.nix
templates/lean/nix/pkgs/: default.nix
templates/lean/nix/pkgs/proofwidgets/: default.nix
templates/lean/nix/shell/: default.nix  mkLeanRegistry.nix
templates/ocaml/: .gitignore  flake.nix
templates/ocaml/.github/workflows/: ci.yml
templates/ocaml/nix/checks/: default.nix
templates/ocaml/nix/formatting/: default.nix
templates/ocaml/nix/pkgs/: default.nix
templates/ocaml/nix/shell/: default.nix
templates/rust/: Cargo.toml  flake.nix  libtemplate.llbc
templates/rust-multi-crate/: Cargo.toml  flake.nix
templates/rust-multi-crate/crates/my-common/: Cargo.toml
templates/rust-multi-crate/crates/my-common/benches/: benchmark.rs
templates/rust-multi-crate/crates/my-common/src/: lib.rs
templates/rust-multi-crate/crates/my-workspace-hack/: Cargo.toml
templates/rust-multi-crate/nix/checks/: default.nix  hakari.nix
templates/rust-multi-crate/nix/pkgs/: default.nix
templates/rust-multi-crate/nix/shell/: default.nix
templates/rust/benches/: benchmark.rs
templates/rust/nix/checks/: default.nix  proofs.nix
templates/rust/nix/lib/: lean.nix
templates/rust/nix/pkgs/: default.nix
templates/rust/nix/pkgs/aeneas-lean-backend/: default.nix
templates/rust/nix/pkgs/aeneas-lean-built/: default.nix
templates/rust/nix/shell/: default.nix
templates/rust/proofs/: Proofs.lean  README.md  lakefile.toml
(+4 files in other folders)
